[workspace]
resolver = "2"
members = [
    "common",
    "customer_db",
    "product_db",
    "buyer_server",
    "seller_server",
    "buyer_client",
    "seller_client",
    "evaluator",
]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
thiserror = "1.0"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }